<resources>
    <string name="app_name">TelaLogin</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="lbl_nome">Nome</string>
    <string name="lbl_endereco">Endereço</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_telefone">Telefone</string>
    <string name="title_menu_ok">Ok</string>
    <string name="title_menu_cancelar">Cancelar</string>
    <string name="title_aviso">Aviso</string>
    <string name="message_campo_invalido">Há campos inválidos ou em branco!!</string>
    <string name="lbl_cpf">CPF</string>
    <string name="lbl_data_nascimento">Data de Nascimento</string>
    <string name="lbl_categoria_leitor">Categoria do Leitor</string>
    <string name="title_erro">ERRO</string>
    <string name="title_menu_excluir">EXCLUIR</string>
    <string name="lbl_cdCategoria">Código da Categoria</string>
    <string name="lbl_dsCategoria">Descrição da Categoria</string>
    <string name="lbl_txtNumMaxDias">Numero máximo de dias que é possivel emprestar a obra</string>
    <string name="lbl_txtTaxaMulta">Taxa de Multa</string>
    <string name="lbl_Titulo">Título</string>
    <string name="lbl_ISBN">ISBN</string>
    <string name="lbl_Codigo_livro">Código do Livro</string>
    <string name="lbl_Autores">Autores</string>
    <string name="lbl_palavra_chave">Palavra-Chave</string>
    <string name="lbl_data_publicacao">Data de Pulicação</string>
    <string name="lbl_numero_edicao">Número de Edição</string>
    <string name="lbl_editora">Editora</string>
    <string name="lbl_numero_paginas">Número de Páginas</string>
</resources>
