<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastroLivro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lbl_Codigo_livro" />

        <EditText
            android:id="@+id/edtCodigoLivro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ISBN" />

        <EditText
            android:id="@+id/edtISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Titulo" />

        <EditText
            android:id="@+id/edtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtCdCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cdCategoria" />

        <EditText
            android:id="@+id/edtCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtAutores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Autores" />

        <EditText
            android:id="@+id/edtAutores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtPalavraChave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_palavra_chave" />

        <EditText
            android:id="@+id/edtPalavraChave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtDtPublicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_data_publicacao" />

        <EditText
            android:id="@+id/edtDtPublicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/txtNumEdicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_numero_edicao" />

        <EditText
            android:id="@+id/edtNumEdicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtEditora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_editora" />

        <EditText
            android:id="@+id/edtEditora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtNumPagina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_numero_paginas" />

        <EditText
            android:id="@+id/edtNumPagina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

</ScrollView>