<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastroCatLeitor">

    <TextView
        android:id="@+id/txtCdCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lbl_cdCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDsCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lbl_dsCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCdCategoria" />

    <TextView
        android:id="@+id/txtNumMaxDias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lbl_txtNumMaxDias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDsCategoria" />

    <EditText
        android:id="@+id/edtCdCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txtCdCategoria"
        app:layout_constraintStart_toStartOf="@+id/txtCdCategoria"
        app:layout_constraintTop_toBottomOf="@+id/txtCdCategoria" />

    <EditText
        android:id="@+id/edtDsCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtDsCategoria"
        app:layout_constraintStart_toStartOf="@+id/txtDsCategoria"
        app:layout_constraintTop_toBottomOf="@+id/txtDsCategoria" />

    <EditText
        android:id="@+id/edtNumMaxDias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txtNumMaxDias"
        app:layout_constraintStart_toStartOf="@+id/txtNumMaxDias"
        app:layout_constraintTop_toBottomOf="@+id/txtNumMaxDias" />

</androidx.constraintlayout.widget.ConstraintLayout>